<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.activity.AddCreditCardActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintTop_toBottomOf="@id/guideline48"
        app:srcCompat="@drawable/baseline_keyboard_arrow_left_24" />

    <TextView
        android:id="@+id/errorCreditCardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/errorCreditCard"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/creditCardNumber"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintEnd_toStartOf="@id/guideline47"/>

    <TextView
        android:id="@+id/errorDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/errorDateOfCard"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintEnd_toEndOf="@id/creditCardDate"
        app:layout_constraintTop_toBottomOf="@id/creditCardDate"/>

    <TextView
        android:id="@+id/errorSpecialCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/errorSpecialCode"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/creditSpecialCode"
        app:layout_constraintStart_toStartOf="@id/creditSpecialCode"
        app:layout_constraintEnd_toStartOf="@id/guideline47"/>

    <TextView
        android:id="@+id/bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/guideline49"
        app:layout_constraintStart_toEndOf="@id/guideline46"/>

    <TextView
        android:id="@+id/creditNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/credit_card_number"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/bankSpinner"
        app:layout_constraintStart_toEndOf="@id/guideline46"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date_card"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/errorCreditCardNumber"
        app:layout_constraintStart_toEndOf="@id/guideline46"/>

    <TextView
        android:id="@+id/specialCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/card_code"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/errorCreditCardNumber"
        app:layout_constraintStart_toStartOf="@id/creditSpecialCode"/>

    <TextView
        android:id="@+id/addYourCreditCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_credit_card"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toStartOf="@id/guideline47"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintTop_toTopOf="@id/back" />

    <EditText
        android:id="@+id/creditCardNumber"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_edittext_credit_card"
        android:ems="10"
        android:hint="@string/number_card"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toStartOf="@id/guideline47"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintTop_toBottomOf="@id/creditNumber"
        />

    <EditText
        android:id="@+id/creditCardDate"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_edittext_credit_card"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <EditText
        android:id="@+id/creditSpecialCode"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_edittext_credit_card"
        android:ems="10"
        android:hint="@string/special_code"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toStartOf="@id/guideline47"
        app:layout_constraintTop_toBottomOf="@id/specialCode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/add"
        android:textSize="17sp"
        android:onClick="addCreditCard"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/guideline50"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintEnd_toStartOf="@id/guideline47"/>

    <Spinner
        android:id="@+id/bankSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_spinner"
        app:layout_constraintEnd_toStartOf="@id/guideline47"
        app:layout_constraintStart_toEndOf="@id/guideline46"
        app:layout_constraintTop_toBottomOf="@id/bank" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="126dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="514dp" />
</androidx.constraintlayout.widget.ConstraintLayout>